[package]
name = "frame-analyzer"
readme.workspace = true
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true

[lib]
name = "frame_analyzer"
path = "src/lib.rs"
crate-type = [
    "staticlib",  # 核心：生成C/C++可调用的静态库
    "rlib"        # 保留：不影响原有Rust项目依赖使用
]

[dependencies]
aya = "0.13.1"
frame-analyzer-ebpf-common = { path = "../frame-analyzer-ebpf-common", features = ["user"], version = "0" }
anyhow = "1"
libc = "0.2"
thiserror = "2.0.11"
ctor = "0.4.0"
ctrlc = "3.4.4"
mio = { version = "1.0.3", features = ["os-ext"] }
# 新增日志依赖（用于验证EBPF加载状态）
log = "0.4.21"
env_logger = "0.10.1"

[build-dependencies]
anyhow = "1.0.96"
